Крестики-нолики на JavaFX [#49777]