@@ -3,7 +3,10 @@ This project demonstrates how to use Java Fx in OOP Style.
 All examples are popular games. (Chess, TicTacToe, SeeBattle and etc)
 
 ##TicTacToe
-
+VM options:
+--module-path
+/home/aplaksin/tools/javafx-sdk-11.0.2/lib
+--add-modules=javafx.controls,javafx.fxml
 ![ScreenShot](images/TicTacToe.png)
 
 ##Chess
